# tvmergeepg

./: README.md  eua_resultado.m3u  globoplay_collector.py  italia_resultado.m3u  italia_resultado_v3.m3u  newsworld_resultado_otimizado.m3u  pyproject.toml  teste_resultado.m3u  teste_resultado_v2.m3u
tvmergeepg/: main.py
